<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.treefinance.saas.monitor</groupId>
	<artifactId>saas-monitor</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>common</module>
		<module>dao</module>
		<module>biz</module>
		<module>facade</module>
		<module>web</module>
	</modules>

	<name>monitor</name>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<distributionManagement>
		<snapshotRepository>
			<id>Snapshots</id>
			<name>User Porject Snapshot</name>
			<url>http://192.168.5.252:8081/nexus/content/repositories/snapshots/</url>
			<uniqueVersion>true</uniqueVersion>
		</snapshotRepository>
		<repository>
			<id>Releases</id>
			<name>User Porject Release</name>
			<url>http://192.168.5.252:8081/nexus/content/repositories/releases/</url>
		</repository>
	</distributionManagement>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.3.RELEASE</version>
		<relativePath />
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>

		<mybatis.version>3.4.4</mybatis.version>
		<mybatis-spring.version>1.3.1</mybatis-spring.version>
		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
		<saas-monitor.version>1.0.0-SNAPSHOT</saas-monitor.version>
	</properties>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>com.treefinance.saas.monitor</groupId>
				<artifactId>monitor-dao</artifactId>
				<version>${saas-monitor.version}</version>
			</dependency>
			<dependency>
				<groupId>com.treefinance.saas.monitor</groupId>
				<artifactId>monitor-common</artifactId>
				<version>${saas-monitor.version}</version>
			</dependency>
			<dependency>
				<groupId>com.treefinance.saas.monitor</groupId>
				<artifactId>monitor-facade</artifactId>
				<version>1.0.2-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.datatrees.toolkits</groupId>
				<artifactId>toolkits</artifactId>
				<version>2.3.2-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.datatrees.common</groupId>
				<artifactId>common-util</artifactId>
				<version>2.0.0-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.datatrees.rawdatacentral</groupId>
				<artifactId>rawdatacentral-api</artifactId>
				<version>3.0.5-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.datatrees.basisdata</groupId>
				<artifactId>basisdata-operator-common-facade</artifactId>
				<version>2.2.8-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.treefinance.commonservice</groupId>
				<artifactId>common-service-facade</artifactId>
				<version>1.7.0</version>
			</dependency>
			<dependency>
				<groupId>com.treefinance.commonservice</groupId>
				<artifactId>uid-worker</artifactId>
				<version>1.7.0</version>
			</dependency>
			<dependency>
				<artifactId>gateway-facade</artifactId>
				<groupId>com.treefinance.saas.gateway</groupId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>

			<!-- 配置中心 -->
			<dependency>
				<groupId>com.github.diamond</groupId>
				<artifactId>super-diamond-client</artifactId>
				<version>2.0.0</version>
			</dependency>
			<!-- dubbo服务 -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>dubbo</artifactId>
				<version>2.5.3</version>
				<exclusions>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.jboss.netty</groupId>
						<artifactId>netty</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.101tec</groupId>
				<artifactId>zkclient</artifactId>
				<version>0.10</version>
			</dependency>
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper</artifactId>
				<version>3.4.9</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!-- MQ -->
			<dependency>
				<groupId>com.alibaba.rocketmq</groupId>
				<artifactId>rocketmq-client</artifactId>
				<version>3.5.8</version>
			</dependency>
			<!-- mybatis -->
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>${mybatis.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>${mybatis-spring.version}</version>
			</dependency>

			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>1.2.31</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-aop</artifactId>
				<version>1.5.3.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-test</artifactId>
				<version>1.5.3.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>4.3.10.RELEASE</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-web</artifactId>
				<version>1.5.3.RELEASE</version>
			</dependency>

			<dependency>
				<groupId>com.dangdang</groupId>
				<artifactId>elastic-job-lite-spring</artifactId>
				<version>2.1.2</version>
			</dependency>

			<dependency>
				<groupId>com.datatrees.common</groupId>
				<artifactId>notify-common-facade</artifactId>
				<version>3.4.6</version>
			</dependency>

			<dependency>
				<groupId>com.treefinance.saas</groupId>
				<artifactId>assistant-monitor</artifactId>
				<version>1.0.5-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>3.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>1.6.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-easymock</artifactId>
			<version>1.6.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>1.6.6</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<showWarnings>true</showWarnings>
					<optimize>true</optimize>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>aspectj-maven-plugin</artifactId>
					<version>1.8</version>
					<dependencies>
						<dependency>
							<groupId>org.aspectj</groupId>
							<artifactId>aspectjrt</artifactId>
							<version>${aspectj.version}</version>
						</dependency>
						<dependency>
							<groupId>org.aspectj</groupId>
							<artifactId>aspectjtools</artifactId>
							<version>${aspectj.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<complianceLevel>${java.version}</complianceLevel>
						<encoding>${project.build.sourceEncoding}</encoding>
						<verbose>true</verbose>
						<privateScope>true</privateScope>
						<showWeaveInfo>true</showWeaveInfo>
						<outxml>true</outxml>
					</configuration>
					<executions>
						<execution>
							<phase>compile</phase>
							<goals>
								<goal>compile</goal>
								<goal>test-compile</goal>
							</goals>
							<configuration>
								<aspectLibraries combine.self="override">
									<aspectLibrary>
										<groupId>org.springframework</groupId>
										<artifactId>spring-aspects</artifactId>
									</aspectLibrary>
								</aspectLibraries>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
